# prompt-placement-anatomy

./: .env.example  .gitignore  README-phase2.md  README.md  complete-prompt-in-one-go.md  pyproject.toml  sequential-prompt.md
assets/anthropic-claude-haiku-4-5/: runs.csv
assets/phase1/anthropic-claude-sonnet-4-6/: runs.csv
assets/phase1/ollama-qwen2.5-coder-3b/: runs.csv
assets/phase2/anthropic-claude-haiku-4-5/: runs.csv
assets/phase2/anthropic-claude-sonnet-4-6/: runs.csv
assets/phase2/ollama-qwen2.5-coder-3b/: runs.csv
placement-experiment/: README.md  pyproject.toml
placement-experiment/src/placement_experiment/: __init__.py  agent_loop.py  analyze.py  config.py  generate_data.py  llm_client.py  placements.py  runner.py
project-generation-prompts/: complete-prompt-in-one-go.md  phase2-complete-prompt.md  sequential-prompt.md
src/prompt_placement_anatomy/: agent_loop.py  analyze.py  config.py  generate_data.py  llm_client.py  placements.py  runner.py  tools.py
src/prompt_placement_anatomy/phase2/: __init__.py  analyze_phase2.py  conflict_placement.py  runner_phase2.py
