[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-placement-anatomy"
version = "0.1.0"
description = "Controlled experiment measuring how instruction placement across prompt slots affects agent behavior in agentic LLM loops."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic==0.99.0",
    "ollama==0.6.2",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_placement_anatomy"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
